# cluster-query-router

./: AGENTS.md  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: build.yml  pr-checks.yml
chart/: .argocd-source-cluster-query-router.yaml  Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
tests/: test_app.py
