[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cluster-query-router"
version = "0.1.0"
description = "Deterministic router for cluster ops questions with MCP-backed evidence"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "pydantic>=2.7.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
only-include = ["app.py"]
skip-directory = []
